Bug 515335. Distance calculation between 2 geocoordinates incorrect for points not on the equator. r=dougt.